--- a/refer-effect/parallexEffect/javascriptPE01.html
+++ b/refer-effect/parallexEffect/javascriptPE01.html
@@ -206,34 +206,100 @@
                         </div>
                         <div class="view-cont">
                             <div>
-<pre><code class="language-html">&lt;div class="paraInfo2"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;section1 offset() : &lt;span class="offset1"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section2 offset() : &lt;span class="offset2"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section3 offset() : &lt;span class="offset3"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section4 offset() : &lt;span class="offset4"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section5 offset() : &lt;span class="offset5"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section6 offset() : &lt;span class="offset6"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section7 offset() : &lt;span class="offset7"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section8 offset() : &lt;span class="offset8"&gt;0&lt;/span&gt;&lt;/li&gt;
-        &lt;li&gt;section9 offset() : &lt;span class="offset9"&gt;0&lt;/span&gt;&lt;/li&gt;
-    &lt;/ul&gt;
+<pre><code class="language-html">&lt;div class="paraCont"&gt;
+    &lt;section id="section1" class="content-item"&gt;
+        &lt;span class="num"&gt;01&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section1&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;언제나 현재에 집중할 수 있다면 행복할 것이다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section1 --&gt;
+​
+    &lt;section id="section2" class="content-item"&gt;
+        &lt;span class="num"&gt;02&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section2&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;많이 읽어라. 그러나 많은 책을 읽지는 마라.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section2 --&gt;
+​
+    &lt;section id="section3" class="content-item"&gt;
+        &lt;span class="num"&gt;03&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section3&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;능력은 그 수요를 결코 충족시킬 수 없을 것이다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section3 --&gt;
+​
+    &lt;section id="section4" class="content-item"&gt;
+        &lt;span class="num"&gt;04&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section4&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;스스로를 존경하면 다른 사람도 당신을 존경할 것이다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section4 --&gt;
+​
+    &lt;section id="section5" class="content-item"&gt;
+        &lt;span class="num"&gt;05&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section5&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;기회 없는 능력은 쓸모가 없다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section5 --&gt;
+​
+    &lt;section id="section6" class="content-item"&gt;
+        &lt;span class="num"&gt;06&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section6&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;우리가 이룬 것만큼, 이루지 못한 것도 자랑스럽습니다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section6 --&gt;
+​
+    &lt;section id="section7" class="content-item"&gt;
+        &lt;span class="num"&gt;07&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section7&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;자신감은 위대한 과업의 첫째 요건이다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section7 --&gt;
+​
+    &lt;section id="section8" class="content-item"&gt;
+        &lt;span class="num"&gt;08&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section8&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;누구나 재능은 있다. 드문 것은 그 재능이 이끄는 암흑 속으로 따라 들어갈 용기다.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section8 --&gt;
+​
+    &lt;section id="section9" class="content-item"&gt;
+        &lt;span class="num"&gt;09&lt;/span&gt;
+        &lt;h2 class="title"&gt;Section9&lt;/h2&gt;
+        &lt;figure class="img-Wrap"&gt;
+            &lt;div class="img"&gt;&lt;/div&gt;
+        &lt;/figure&gt;
+        &lt;p class="desc"&gt;자신의 능력을 믿어야 한다. 그리고 끝까지 굳세게 밀고 나가라.&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;!-- //section9 --&gt;
 &lt;/div&gt;
-  ​
-  &lt;div class="paraNav"&gt;
-    &lt;ul&gt;
-        &lt;li class="active"&gt;&lt;a href="#section1"&gt;s1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section2"&gt;s2&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section3"&gt;s3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section4"&gt;s4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section5"&gt;s5&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section6"&gt;s6&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section7"&gt;s7&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section8"&gt;s8&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="#section9"&gt;s9&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/div&gt;
-  &lt;!-- //nav --&gt;
+&lt;!-- //contents --&gt;
+&lt;/main&gt;
+&lt;!-- //main --&gt;
 </code></pre>
                             </div>
                             <div>
