--- a/refer-effect/sliderEffect/javascriptSE01.html
+++ b/refer-effect/sliderEffect/javascriptSE01.html
@@ -122,6 +122,7 @@
         &lt;/div&&gt;
     &lt;/div&&gt;
 &lt;/main&&gt;
+</code></pre>
                             </div>
                             <div>
 <pre><code class="language-css"> /* slider */
