--- a/refer-effect/mouseEffect/jqueryME01.html
+++ b/refer-effect/mouseEffect/jqueryME01.html
@@ -151,103 +151,148 @@
                         <div class="view-cont">
                             <div>
 <pre><code class="language-html">&lt;main&gt;
-    &lt;div id="tab-menu"&gt;
-        &lt;div class="tab-btn"&gt;
-            &lt;ul&gt;
-                &lt;li class="active"&gt;&lt;a href="#"&gt;노래1&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래2&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래3&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래4&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래5&lt;/a&gt;&lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/div&gt;
-        &lt;div class="tab-cont"&gt;
-            &lt;div&gt;
-                &lt;h2&gt;걱정말아요 그대&lt;/h2&gt;
-                &lt;p&gt;그대여 너무 걱정하지 말아요 우리 함께 노래합시다 그대 아픈 기억들 모두 그대여 그대 가슴에 깊이 묻어 버리고 지나간 것은 지나간 대로 그런 의미가 있죠 떠난 이에게 노래 하세요 후회없이 사랑했노라 말해요&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;다행이다&lt;/h2&gt;
-                &lt;p&gt;그대를 만나고 그대의 머릿결을 만질 수가 있어서 그대를 만나고 그대와 마주보며 숨을 쉴 수 있어서 그대를 안고서 힘이 들면 눈물 흘릴 수가 있어서 다행이다 그대라는 아름다운 세상이 여기 있어줘서&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;찔레꽃&lt;/h2&gt;
-                &lt;p&gt;하얀 꽃 찔레꽃 순박한 꽃 찔레꽃 별 처럼 슬픈 찔레꽃 달처럼 서러운 찔레꽃 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 목노아 울었지 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 밤새워 울었지&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;홍연&lt;/h2&gt;
-                &lt;p&gt;세상에 처음 날 때 인연인 사람들은 손과 손에 붉은 실이 이어진 채 온다 했죠 당신이 어디 있든 내가 찾을 수 있게 손과 손에 붉은 실이 이어진 채 왔다 했죠 눈물진 나의 뺨을 쓰담아 주면서도 다른 손은 칼을 거두지 않네 또 다시 사라져&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;바람이 불어와도&lt;/h2&gt;
-                &lt;p&gt;내 앞에 다가오는 저 빛은 뭘까 피하려 해보지만 이내 날 감싸네 어느새 익숙해져 마치 피부처럼 내 속에 가득히 안기네&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
+
+    &lt;article class="mouseCont"&gt;
+      &lt;p&gt;If you want the present to be different from the past, &lt;span class="style1"&gt;study the past&lt;/span&gt;&lt;/p&gt;
+      &lt;h2&gt;&lt;span class="style2"&gt;현재가&lt;/span&gt; 과거와 &lt;span class="style1"&gt;다르길&lt;/span&gt; 바란다면 &lt;span class="style3"&gt;과거를 공부하라&lt;/span&gt;&lt;/h2&gt;
+    &lt;/article&gt;
+  &lt;/main&gt;
+
+  &lt;div class="info left list"&gt;
+    &lt;ul&gt;
+        &lt;li&gt;clientX : &lt;span class="clientX"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;clientY : &lt;span class="clientY"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;offsetX : &lt;span class="offsetX"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;offsetY : &lt;span class="offsetY"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;pageX : &lt;span class="pageX"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;pageY : &lt;span class="pageY"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;screenX : &lt;span class="screenX"&gt;0&lt;/span&gt;&lt;/li&gt;
+        &lt;li&gt;screenY : &lt;span class="screenY"&gt;0&lt;/span&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+ &lt;/div&gt;
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-css">#tab-menu {
-    min-width: 600px;
-    background: #000;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 5px;
-    font-family: 'NEXONLv2';
+<pre><code class="language-css">.mouseCont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     color: #fff;
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
-    }
-    .tab-btn ul {
-        display: flex;
-    }
-    .tab-btn li {
-        width: 20%;
-        list-style: none;
-        text-align: center;
-    }
-    .tab-btn li a {
-        color: #fff;
-        text-decoration: none;
-        padding: 15px;
-        display: block;
-    }
-    .tab-btn li.active a {
-        border-bottom: 3px solid #ffc400;
-    }
-    .tab-cont {
-        background: #fff;
-        padding: 20px;
-        color: #000;
-    }
-    .tab-cont > div {
-        display: none;
-    }
-    .tab-cont > div:first-child{
-        display: block;
-    }
-    .tab-cont > div > h2{
-        margin-bottom: 10px;
-    }
-    .tab-cont > div p {
-        margin-bottom: 5px;
-    }
+    font-family: 'NEXONLv1';
+    cursor: none;
+}
+.mouseCont p {
+    font-size: 2.5vw;
+    line-height: 2.3;
+    font-weight: 300;
+}
+.mouseCont h2 {
+    font-size: 3vw;
+    font-weight: normal;
+}
+.mouseCont span {
+    font-weight: 500;
+    border-bottom: 0.2vw solid #fff;
+}
+.cursor {
+    position: absolute;
+    left: 0; top: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    z-index: 9999;
+    background-color: rgba(255,255,255,0.1);
+    user-select: none;
+    pointer-events: none;
+    transition:
+        background-color .2s,
+        border-color .2s,
+        border-radius .2s,
+        transform .2s;
+}
+.cursor.style1 {
+    background-color: rgba(138, 138, 138, 0.5);
+    border-color: tomato;
+}
+.cursor.style2 {
+    background-color: rgba(158, 227, 255, 0.5);
+    border-color: slateblue;
+    border-radius: 5px;
+    transform: rotate(30deg) scale(2);
+}
+.cursor.style3 {
+    background-color: rgba(239, 250, 255, 0.5);
+    border-color: rgb(0, 119, 231);
+    background-image: url(https://images.unsplash.com/photo-1541480601022-2308c0f02487?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    background-size: cover;
+    background-position: center;
+    transform: scale(2);
+    transition: .1s;
+}
+.cursor.style4 {}
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-javascript">const tabBtn = $(".tab-btn ul li");
-    const tabCtn = $(".tab-cont > div");
+<pre><code class="language-javascript">//출력용
+    $(window).mousemove(function(e){
+        $(".clientX").text(e.clientX + "px");   //브라우저 좌표 기준
+        $(".clientY").text(e.clientY + "px");   
+        $(".offsetX").text(e.offsetX + "px");   //요소 좌표 기준
+        $(".offsetY").text(e.offsetY + "px");   
+        $(".pageX").text(e.pageX + "px");       //페이지 X좌표 기준
+        $(".pageY").text(e.pageY + "px");
+        $(".screenX").text(e.screenX + "px");   //디바이스 좌표 기준
+        $(".screenY").text(e.screenY + "px");
+    });
 
-    tabBtn.click(function(){
-        let target = $(this);
-        tabBtn.removeClass("active");
-        target.addClass("active");
+    //마우스 움직이기
+    $(window).mousemove(function(e){
+        $(".cursor").css({left:e.clientX -25, top:e.clientY -25});
 
-        let index = target.index();
-        tabCtn.css("display","none");
-        tabCtn.eq(index).css("display","block");
+        // $(".cursor").css("left","100px");
+        // $(".cursor").css("top","100px");
+        //$(".cursor").css({left:"100px",top:"100px"});      //속성값은 ""가 없어도 됨
+        //$(".cursor").css({left:100,top:100});              //제이쿼리에선 이렇게 쓸 수 있다
+        //$(".cursor").css({left:100,"background-color":100});
+
+
+        // $(".mouseCont .style").mouseover(function(){
+        //     $(".cursor").addClass("active");
+        // });
+        // $(".mouseCont .style").mouseout(function(){
+        //     $(".cursor").removeClass("active");
+        // })
+
+        // for(let i=1; i&lt;6; i++){
+        //     $(".mouseCont .style"+i).hover(function(){
+        //     $(".cursor").addClass("style"+i);
+        //     }, function(){
+        //         $(".cursor").removeClass("style"+i);
+        //     });
+        // }
+
+
+    });
+    //each()
+    // $(".mouseCont span").each((index,element) => {
+    //         $(element).hover(function(){
+    //             $(".cursor").addClass("style"+(index+1));
+    //         }),function(){
+    //             $(".cursor").removeClass("style"+(index+1));
+    //         }
+    //     });
+
+    //attr()
+    $(".mouseCont span").hover(function(){
+        $(".cursor").addClass($(this).attr("class"));
+    }, function(){
+        $(".cursor").removeClass($(this).attr("class"));
     });
 </code></pre>
                             </div>
