--- a/refer-effect/mouseEffect/jqueryMe07.html
+++ b/refer-effect/mouseEffect/jqueryMe07.html
@@ -190,104 +190,130 @@
                         <div class="view-cont">
                             <div>
 <pre><code class="language-html">&lt;main&gt;
-    &lt;div id="tab-menu"&gt;
-        &lt;div class="tab-btn"&gt;
-            &lt;ul&gt;
-                &lt;li class="active"&gt;&lt;a href="#"&gt;노래1&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래2&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래3&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래4&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래5&lt;/a&gt;&lt;/li&gt;
-            &lt;/ul&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
+       
+    &lt;div class="contents"&gt;
+        &lt;div class="moveImage"&gt;
+            &lt;div class="textWrap"&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanSlow"&gt;Real love is a permanently&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanSlow"&gt;Real love is a permanently&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanFast"&gt;self-enlarging experience.&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanFast"&gt;self-enlarging experience.&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanSlow"&gt;진정한 사랑은 영원히 자신을&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanSlow"&gt;진정한 사랑은 영원히 자신을&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanFast"&gt;성장시키는 경험이다.&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;div class="spanFast"&gt;성장시키는 경험이다.&lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class="imgWrap"&gt;
+                &lt;img src="../assets/img/bg08.jpg" alt="이미지"&gt;
+            &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class="tab-cont"&gt;
-            &lt;div&gt;
-                &lt;h2&gt;걱정말아요 그대&lt;/h2&gt;
-                &lt;p&gt;그대여 너무 걱정하지 말아요 우리 함께 노래합시다 그대 아픈 기억들 모두 그대여 그대 가슴에 깊이 묻어 버리고 지나간 것은 지나간 대로 그런 의미가 있죠 떠난 이에게 노래 하세요 후회없이 사랑했노라 말해요&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;다행이다&lt;/h2&gt;
-                &lt;p&gt;그대를 만나고 그대의 머릿결을 만질 수가 있어서 그대를 만나고 그대와 마주보며 숨을 쉴 수 있어서 그대를 안고서 힘이 들면 눈물 흘릴 수가 있어서 다행이다 그대라는 아름다운 세상이 여기 있어줘서&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;찔레꽃&lt;/h2&gt;
-                &lt;p&gt;하얀 꽃 찔레꽃 순박한 꽃 찔레꽃 별 처럼 슬픈 찔레꽃 달처럼 서러운 찔레꽃 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 목노아 울었지 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 밤새워 울었지&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;홍연&lt;/h2&gt;
-                &lt;p&gt;세상에 처음 날 때 인연인 사람들은 손과 손에 붉은 실이 이어진 채 온다 했죠 당신이 어디 있든 내가 찾을 수 있게 손과 손에 붉은 실이 이어진 채 왔다 했죠 눈물진 나의 뺨을 쓰담아 주면서도 다른 손은 칼을 거두지 않네 또 다시 사라져&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;바람이 불어와도&lt;/h2&gt;
-                &lt;p&gt;내 앞에 다가오는 저 빛은 뭘까 피하려 해보지만 이내 날 감싸네 어느새 익숙해져 마치 피부처럼 내 속에 가득히 안기네&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
+    &lt;/div&gt;
     &lt;/div&gt;
 &lt;/main&gt;
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-css">#tab-menu {
-    min-width: 600px;
-    background: #000;
+<pre><code class="language-css">
+.textWrap {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 5px;
+    left: 50%; top: 40%;
+    transform: translate( -50%, -40% );
     font-family: 'NEXONLv2';
+    font-size: 40px;
+    font-weight: 600;
     color: #fff;
+}
+
+.textWrap .line {
+    width: 100%;
+    display: flex;
+}
+.textWrap .line .left {
+    width: 50vw;
+    color:deepskyblue;
     overflow: hidden;
-    }
-    .tab-btn ul {
-        display: flex;
-    }
-    .tab-btn li {
-        width: 20%;
-        list-style: none;
-        text-align: center;
-    }
-    .tab-btn li a {
-        color: #fff;
-        text-decoration: none;
-        padding: 15px;
-        display: block;
-    }
-    .tab-btn li.active a {
-        border-bottom: 3px solid #ffc400;
-    }
-    .tab-cont {
-        background: #fff;
-        padding: 20px;
-        color: #000;
-    }
-    .tab-cont > div {
-        display: none;
-    }
-    .tab-cont > div:first-child{
-        display: block;
-    }
-    .tab-cont > div > h2{
-        margin-bottom: 10px;
-    }
-    .tab-cont > div p {
-        margin-bottom: 5px;
-    }
+    transform: skew(0deg, 20deg);
+}
+.textWrap .line .left .spanWrap {
+    width: 100vw;
+    text-align: center;
+}
+.textWrap .line .right {
+    width: 50vw;
+    overflow: hidden;
+    transform: skew(0deg, -20deg);
+}
+.textWrap .line .right .spanWrap {
+    width: 100vw;
+    text-align: center;
+    transform: translateX(-50vw);
+}
+.textWrap span {
+    display: inline-block;
+}
+
+.imgWrap {
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate( -50%, -50% );
+    z-index: -1;
+}
+.imgWrap img {
+    width: 100%;
+}
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-javascript">const tabBtn = $(".tab-btn ul li");
-    const tabCtn = $(".tab-cont > div");
+<pre><code class="language-javascript">
+function mouseMove(e){
+    let positionSlow = (e.pageX - ( $(window).width()/2 )) * 0.1;
+    let positionFast = (e.pageX - ( $(window).width()/2 )) * 0.2;
 
-    tabBtn.click(function(){
-        let target = $(this);
-        tabBtn.removeClass("active");
-        target.addClass("active");
-
-        let index = target.index();
-        tabCtn.css("display","none");
-        tabCtn.eq(index).css("display","block");
-    });
+    gsap.to(".spanSlow", {duration: 0.4, x: positionSlow})
+    gsap.to(".spanFast", {duration: 0.4, x: -positionSlow})
+}
+$(window).on("mousemove", mouseMove);
 </code></pre>
                             </div>
                         </div>
