--- a/refer-effect/sliderEffect/jquerySE06.html
+++ b/refer-effect/sliderEffect/jquerySE06.html
@@ -189,103 +189,180 @@
                         <div class="view-cont">
                             <div>
 <pre><code class="language-html">&lt;main&gt;
-    &lt;div id="tab-menu"&gt;
-        &lt;div class="tab-btn"&gt;
-            &lt;ul&gt;
-                &lt;li class="active"&gt;&lt;a href="#"&gt;노래1&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래2&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래3&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래4&lt;/a&gt;&lt;/li&gt;
-                &lt;li&gt;&lt;a href="#"&gt;노래5&lt;/a&gt;&lt;/li&gt;
-            &lt;/ul&gt;
+    &lt;div class="slider-wrap"&gt;
+        &lt;div class="slider-img"&gt;
+            &lt;div class="slider-inner"&gt;
+                &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg04.jpg" alt="이미지1"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg08.jpg" alt="이미지2"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg09.jpg" alt="이미지3"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg03.jpg" alt="이미지4"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg010.jpg" alt="이미지5"&gt;&lt;/div&gt;
+            &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class="tab-cont"&gt;
-            &lt;div&gt;
-                &lt;h2&gt;걱정말아요 그대&lt;/h2&gt;
-                &lt;p&gt;그대여 너무 걱정하지 말아요 우리 함께 노래합시다 그대 아픈 기억들 모두 그대여 그대 가슴에 깊이 묻어 버리고 지나간 것은 지나간 대로 그런 의미가 있죠 떠난 이에게 노래 하세요 후회없이 사랑했노라 말해요&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;다행이다&lt;/h2&gt;
-                &lt;p&gt;그대를 만나고 그대의 머릿결을 만질 수가 있어서 그대를 만나고 그대와 마주보며 숨을 쉴 수 있어서 그대를 안고서 힘이 들면 눈물 흘릴 수가 있어서 다행이다 그대라는 아름다운 세상이 여기 있어줘서&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;찔레꽃&lt;/h2&gt;
-                &lt;p&gt;하얀 꽃 찔레꽃 순박한 꽃 찔레꽃 별 처럼 슬픈 찔레꽃 달처럼 서러운 찔레꽃 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 목노아 울었지 찔레꽃 향기는 너무 슬퍼요 그래서 울었지 밤새워 울었지&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;홍연&lt;/h2&gt;
-                &lt;p&gt;세상에 처음 날 때 인연인 사람들은 손과 손에 붉은 실이 이어진 채 온다 했죠 당신이 어디 있든 내가 찾을 수 있게 손과 손에 붉은 실이 이어진 채 왔다 했죠 눈물진 나의 뺨을 쓰담아 주면서도 다른 손은 칼을 거두지 않네 또 다시 사라져&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;div&gt;
-                &lt;h2&gt;바람이 불어와도&lt;/h2&gt;
-                &lt;p&gt;내 앞에 다가오는 저 빛은 뭘까 피하려 해보지만 이내 날 감싸네 어느새 익숙해져 마치 피부처럼 내 속에 가득히 안기네&lt;/p&gt;
-            &lt;/div&gt;
+        &lt;div class="slider-btn"&gt;
+            &lt;a href="#" class="prev"&gt;prev&lt;/a&gt;
+            &lt;a href="#" class="next"&gt;next&lt;/a&gt;
+        &lt;/div&gt;
+        &lt;div class="slider-dot"&gt;
+            &lt;!-- &lt;a href="#" class="dot active"&gt;1&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;2&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;3&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;4&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;5&lt;/a&gt; --&gt;
         &lt;/div&gt;
     &lt;/div&gt;
 &lt;/main&gt;
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-css">#tab-menu {
-    min-width: 600px;
-    background: #000;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 5px;
-    font-family: 'NEXONLv2';
-    color: #fff;
-    overflow: hidden;
-    }
-    .tab-btn ul {
+<pre><code class="language-css">/* slider */
+    .slider-wrap {
         display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
     }
-    .tab-btn li {
-        width: 20%;
-        list-style: none;
+    .slider-img img {
+        width: 100%;
+    }
+    .slider-img {
+        position: absolute;
+        left: 50%; top: 50%;
+        transform: translate(-50%, -50%);
+        width: 800px;
+        overflow: hidden;
+    }
+
+    .slider-inner {
+        position: relative;
+        /* width: 4000px; */
+        overflow: hidden;
+    }
+
+    .slider {
+        float: left;
+        width: 800px;
+        height: 480px;
+        position: relative;
+    }
+    
+    .slider::before {
+        position: absolute;
+        left: 5px; top: 5px;
+        background: rgba(0,0,0,0.4);
+        color: #fff;
+        padding: 5px 10px 6px;
+    }
+    
+    .slider:nth-child(1){z-index: 5;}
+    .slider:nth-child(2){z-index: 4;}
+    .slider:nth-child(3){z-index: 3;}
+    .slider:nth-child(4){z-index: 2;}
+    .slider:nth-child(5){z-index: 1;}
+    .slider::before {content: attr(data-name);}
+
+    .slider-btn a {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1000;
+        width: 50px;
+        height: 50px;
+        background: rgba(0,0,0,.4);
         text-align: center;
-    }
-    .tab-btn li a {
+        line-height: 50px;
+        transition: all 0.2s;
+        display: block;
         color: #fff;
         text-decoration: none;
-        padding: 15px;
-        display: block;
     }
-    .tab-btn li.active a {
-        border-bottom: 3px solid #ffc400;
+
+    .slider-btn a:hover {
+        background: rgba(241,96,86,1);
     }
-    .tab-cont {
-        background: #fff;
-        padding: 20px;
-        color: #000;
+
+    .slider-btn .prev {
+        left: 0;
     }
-    .tab-cont > div {
-        display: none;
+    .slider-btn .next {
+        right: 0;
     }
-    .tab-cont > div:first-child{
-        display: block;
+
+    .slider-dot {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 20px;
     }
-    .tab-cont > div > h2{
-        margin-bottom: 10px;
+    .slider-dot .dot {
+        width: 20px;
+        height: 20px;
+        background: rgba(0,0,0,.4);
+        display: inline-block;
+        border-radius: 50%;
+        transition: all 0.3s;
+        text-indent: -9999px;
+        margin: 3px;
     }
-    .tab-cont > div p {
-        margin-bottom: 5px;
+    .slider-dot .dot.active {
+        width: 20px;
+        height: 20px;
+        background: rgba(255,255,255,.4);
+        display: inline-block;
+        border-radius: 50%;
     }
 </code></pre>
                             </div>
                             <div>
-<pre><code class="language-javascript">const tabBtn = $(".tab-btn ul li");
-    const tabCtn = $(".tab-cont > div");
+<pre><code class="language-javascript">const sliderInner = $(".slider-inner");
+    const slider = $(".slider");
+    const sliderBtn = $(".slider-btn");
+    const sliderDot = $(".slider-dot");
 
-    tabBtn.click(function(){
-        let target = $(this);
-        tabBtn.removeClass("active");
-        target.addClass("active");
+    let sliderCount = slider.length;
+    let sliderWidth = slider.width();
+    sliderTotalWidth = sliderWidth * sliderCount;
+    let currentIndex = 0;
+    let dotIndex = "";
 
-        let index = target.index();
-        tabCtn.css("display","none");
-        tabCtn.eq(index).css("display","block");
+    //이미지 가로값 세팅
+    sliderInner.css({ width: sliderTotalWidth });
+    slider.css({ width: sliderWidth });
+
+    //이미지 움직이기
+    function gotoSlider(num){
+        sliderInner.animate({ left: -sliderWidth * num },400, "easeInQuart");
+        currentIndex = num;
+        sliderDot.find("a").removeClass("active").eq(currentIndex).addClass("active");
+    }
+
+    //닷 버튼 클릭하기
+    sliderDot.on("click","a", function(e){
+        e.preventDefault();
+        gotoSlider($(this).index());
+    })
+
+    //닷 버튼 생성
+    //이미지 갯수만큼 닷 메뉴생성
+    slider.each(function(index){
+        dotIndex += "&lt;a href='#' class='dot'&gt;" + index + "&lt;/a&gt;";
+    });
+    sliderDot.html(dotIndex);
+    sliderDot.find("a").eq(currentIndex).addClass("active");
+
+    //버튼 클릭하기
+    sliderBtn.click(function(){});
+    sliderBtn.on("click","a", function(e){
+        e.preventDefault();
+        let nextIndex = ( currentIndex +1 ) % sliderCount;
+        let prevIndex = ( currentIndex -1 ) % sliderCount;
+        if(currentIndex == 0 ) prevIndex = sliderCount - 1;
+
+        if( $(this).hasClass("prev") ){
+            gotoSlider(prevIndex);
+        } else {
+            gotoSlider(nextIndex);
+        }
     });
 </code></pre>
                             </div>
