--- a/refer-javascript/test.html
+++ b/refer-javascript/test.html
@@ -1,11 +1,13 @@
-&lt;main&&gt;
-    &lt;div class="slider-wrap"&&gt;
-        &lt;div class="slider-img"&&gt;
-            &lt;div class="slider" data-name="이미지1"&&gt;&lt;img src="../assets/img/bg01.jpg" alt="이미지1"&&gt;&lt;/div&&gt;
-            &lt;div class="slider" data-name="이미지2"&&gt;&lt;img src="../assets/img/bg02.jpg" alt="이미지2"&&gt;&lt;/div&&gt;
-            &lt;div class="slider" data-name="이미지3"&&gt;&lt;img src="../assets/img/bg03.jpg" alt="이미지3"&&gt;&lt;/div&&gt;
-            &lt;div class="slider" data-name="이미지4"&&gt;&lt;img src="../assets/img/bg04.jpg" alt="이미지4"&&gt;&lt;/div&&gt;
-            &lt;div class="slider" data-name="이미지5"&&gt;&lt;img src="../assets/img/bg07.jpg" alt="이미지5"&&gt;&lt;/div&&gt;
-        &lt;/div&&gt;
-    &lt;/div&&gt;
-&lt;/main&&gt;
+&lt;main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
+
+    &lt;div class="moveWrap"&gt;
+        &lt;article class="moveImage"&gt;
+            &lt;div class="mImg"&gt;&lt;img src="../assets/img/bg010.jpg" alt="이미지"&gt;&lt;/div&gt;
+            &lt;div class="mText"&gt;
+                &lt;p&gt;Put yourself on view. This brings your talents to light.&lt;/p&gt;
+                &lt;p&gt;자신을 내 보여라. 그러면 재능이 드러날 것이다.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+    &lt;/div&gt;
+&lt;/main&gt;
